volume not done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -343,6 +343,7 @@
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
+                        android:onClick="area"
                         android:layout_width="0dp"
                         android:layout_height="120dp"
                         android:layout_weight="1"
