--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -16,7 +16,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="#3F6FEA"
             app:title="Temperature Converter"
-            app:navigationIcon="@drawable/ic_menu"
+            app:navigationIcon="@drawable/ic_arrow_back"
             app:titleTextColor="?attr/colorSurface"
             app:navigationIconTint="?attr/colorSurface"
             app:menu="@menu/top_menu"/>
