--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -13,12 +13,12 @@
 
     <item
         android:id="@+id/nav_favorite"
-        android:icon="@drawable/ic_star"
-        android:title="Favorites"/>
+        android:icon="@drawable/ic_info"
+        android:title="Info"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings"/>
+<!--    <item-->
+<!--        android:id="@+id/nav_settings"-->
+<!--        android:icon="@drawable/ic_settings"-->
+<!--        android:title="Settings"/>-->
 
 </menu>
