--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="#3F6FEA"
         app:title="Unit Converter"
-        app:navigationIcon="@drawable/ic_menu"
+        app:navigationIcon="@drawable/ic_home"
         app:titleTextColor="?attr/colorSurface"
         app:navigationIconTint="?attr/colorSurface"
         app:menu="@menu/top_menu"/>
